# STM_PASSIVE_LOGGER

./: .gitignore  README.md  UI_BUTTONS_AND_OPTIONS.md  USAGE.md  pyproject.toml  健康检查.bat  启动logger.bat  实验员说明.md  打开标注UI.bat  查看数据.bat  自检.bat  记录&标记脚本使用方法（详细参阅解压包中的说明）.docx
stm_experimenter_agent/: __init__.py  cli.py
stm_experimenter_agent/annotation/: __init__.py  image_view.py  index.html  server.py  store.py
stm_experimenter_agent/assets/luts/: default.lut
stm_experimenter_agent/config/: __init__.py  action_space.yaml  hardware_limits.yaml  label_schema.yaml  logger.yaml  nanonis_ports.yaml
stm_experimenter_agent/data_collection/: __init__.py  dataset_writer.py  preview.py  scan_capture.py  session_logger.py  signal_logger.py  sxm_archive.py  sxm_importer.py  sxm_parser.py
stm_experimenter_agent/nanonis_driver/: __init__.py  client.py  raw_protocol.py
tests/: test_annotation.py  test_client_readonly.py  test_dataset_writer.py  test_raw_protocol.py  test_sxm_parser.py
