[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stm_experimenter_agent"
version = "0.1.0"
description = "STM Experimenter Agent - Phase 0 passive logger and data collection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "nanonis-spm>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
stm-logger = "stm_experimenter_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stm_experimenter_agent*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
